--- a/ubiquity/localization/templates/social.pot
+++ b/ubiquity/localization/templates/social.pot
@@ -1,20 +1,26 @@
+# social.po
+# 
+# Localizers:
+# LOCALIZER <EMAIL>
+
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
-"POT-Creation-Date: 2009-06-19 11:07+0900\n"
+"POT-Creation-Date: 2009-06-20 00:48+0900\n"
 
 #. twitter command:
-msgid "twitter.names"
-msgstr "twitter|tweet|share using twitter"
-
-msgid "twitter.contributors"
+#. use | to separate multiple name values:
+msgctxt "twitter.names"
+msgid "twitter|tweet|share using twitter"
 msgstr ""
 
-msgid "twitter.help"
-msgstr "You'll need a <a href=\"http://twitter.com\">Twitter account</a>, obviously.  If you're not already logged in you'll be asked to log in."
+msgctxt "twitter.help"
+msgid "You'll need a <a href=\"http://twitter.com\">Twitter account</a>, obviously.  If you're not already logged in you'll be asked to log in."
+msgstr ""
 
-msgid "twitter.description"
-msgstr "Sets your Twitter status to a message of at most 160 characters."
+msgctxt "twitter.description"
+msgid "Sets your Twitter status to a message of at most 160 characters."
+msgstr ""
 
 msgctxt "twitter.preview"
 msgid "Updates your Twitter status ${username} to:"
@@ -54,17 +60,14 @@ msgstr ""
 
 
 #. digg command:
-msgid "digg.names"
-msgstr "digg|share using digg"
-
-msgid "digg.contributors"
+#. use | to separate multiple name values:
+msgctxt "digg.names"
+msgid "digg|share using digg"
 msgstr ""
 
-msgid "digg.help"
+msgctxt "digg.description"
+msgid "If not yet submitted, submits the page to Digg. Otherwise, it takes you to the story's Digg page."
 msgstr ""
-
-msgid "digg.description"
-msgstr "If not yet submitted, submits the page to Digg. Otherwise, it takes you to the story's Digg page."
 
 msgctxt "digg.preview"
 msgid "Submit or digg this page. Checking if this page has already been submitted..."
@@ -88,17 +91,14 @@ msgstr ""
 
 
 #. tinyurl command:
-msgid "tinyurl.names"
-msgstr "tinyurl"
-
-msgid "tinyurl.contributors"
+#. use | to separate multiple name values:
+msgctxt "tinyurl.names"
+msgid "tinyurl"
 msgstr ""
 
-msgid "tinyurl.help"
+msgctxt "tinyurl.description"
+msgid "Replaces the selected URL with a <a href=\"http://www.tinyurl.com\">TinyURL</a>."
 msgstr ""
-
-msgid "tinyurl.description"
-msgstr "Replaces the selected URL with a <a href=\"http://www.tinyurl.com\">TinyURL</a>."
 
 msgctxt "tinyurl.preview"
 msgid "Replaces the selected URL with..."
@@ -110,17 +110,18 @@ msgstr ""
 
 
 #. share (on delicious) command:
-msgid "share (on delicious).names"
-msgstr "share |delicious"
-
-msgid "share (on delicious).contributors"
+#. use | to separate multiple name values:
+msgctxt "share (on delicious).names"
+msgid "share|delicious"
 msgstr ""
 
-msgid "share (on delicious).help"
-msgstr "Select text on the page to use as notes, or enter your own text after the command word.  You can also assign tags to the bookmark with the \"tagged\" modifier, and alter the bookmark default page title with the \"entitled\" modifier.  Note that you must also already be logged in at delicious.com to use this command."
+msgctxt "share (on delicious).help"
+msgid "Select text on the page to use as notes, or enter your own text after the command word.  You can also assign tags to the bookmark with the \"tagged\" modifier, and alter the bookmark default page title with the \"entitled\" modifier.  Note that you must also already be logged in at delicious.com to use this command."
+msgstr ""
 
-msgid "share (on delicious).description"
-msgstr "Share the current page as a bookmark on delicious.com"
+msgctxt "share (on delicious).description"
+msgid "Share the current page as a bookmark on delicious.com"
+msgstr ""
 
 msgctxt "share (on delicious).preview"
 msgid "No active user found - log in at ${delicious} to use this command."
@@ -152,17 +153,18 @@ msgstr ""
 
 
 #. ask rypple command:
-msgid "ask rypple.names"
-msgstr "ask rypple|rypple"
-
-msgid "ask rypple.contributors"
+#. use | to separate multiple name values:
+msgctxt "ask rypple.names"
+msgid "ask rypple|rypple"
 msgstr ""
 
-msgid "ask rypple.help"
-msgstr "You'll need a <a href=\"http://rypple.com\">Rypple account</a> and be logged in"
+msgctxt "ask rypple.help"
+msgid "You'll need a <a href=\"http://rypple.com\">Rypple account</a> and be logged in"
+msgstr ""
 
-msgid "ask rypple.description"
-msgstr "Asks a question on Rypple"
+msgctxt "ask rypple.description"
+msgid "Asks a question on Rypple"
+msgstr ""
 
 msgctxt "ask rypple.preview"
 msgid "Asks the following question (${charsLeft} characters left):"
