--- a/ubiquity/localization/da/general.po
+++ b/ubiquity/localization/da/general.po
@@ -175,7 +175,7 @@ msgstr "g-udreng"
 
 msgctxt "gcalculate.help"
 msgid "Try 5% of 700,  sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal."
-msgstr "Prøv 5% of 700,  sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal.<br />Note: Google Udregner bruger engelske udtryk."
+msgstr "Prøv 5% of 700,  sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal.<br />OBS: Google Udregner bruger engelske udtryk."
 
 msgctxt "gcalculate.description"
 msgid "Calculate knows many functions, constants, units, currencies, etc."
