--- a/ubiquity/localization/da/calendar.po
+++ b/ubiquity/localization/da/calendar.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
 "POT-Creation-Date: 2009-06-20 00:46+0900\n"
 
-#. add (to calendar) command:
+#. add to google calendar command:
 #. use | to separate multiple name values:
-msgctxt "add (to calendar).names"
+msgctxt "add to google calendar.names"
 msgid "add"
 msgstr "tilføj"
 
-msgctxt "add (to calendar).help"
+msgctxt "add to google calendar.help"
 msgid "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=36604\" title=\"Quick Add\">Enter the event naturally</a>\n"
 ". e.g.:\n"
 "<ul>\n"
@@ -29,15 +29,15 @@ msgstr "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=36
 "</ul><p>Virker på nuværende tidspunkt kun med <a href=\"http://calendar.google.com\">Google Kalender</a>, så du skal bruge en Google konto for at benytte servicen.</p>"
 
 
-msgctxt "add (to calendar).description"
+msgctxt "add to google calendar.description"
 msgid "Adds an event to your calendar."
 msgstr "Tilføjer en aftale til din kalender."
 
-msgctxt "add (to calendar).execute"
+msgctxt "add to google calendar.execute"
 msgid "Event created"
 msgstr "Aftale oprettet"
 
-msgctxt "add (to calendar).execute"
+msgctxt "add to google calendar.execute"
 msgid "Error creating the event"
 msgstr "Der opstod en fejl ved oprettelsen af aftalen"
 
